# lst-irf-classes

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yaml
example/: ic_std_config.json
notebooks/: data-access-example.ipynb
src/iclass/: io.py  markup.py  rf.py  rf_func.py  split.py
src/iclass/markup/: __init__.py  markup.py
src/iclass/markup/tests/: markup.py
src/iclass/scripts/: applyrf.py  icmkmarkup.py  ictrainrf.py  mcsplit.py
src/iclass/tests/: test_markup.py  test_rf.py  test_rffunc.py  test_split.py
