[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iclass"
version = "0.0.1"
authors = [
  { name="Ievgen Vovk", email="vovk@icrr.u-tokyo.ac.jp" },
  { name="Marcel Strzys", email="strzys@icrr.u-tokyo.ac.jp" },
  { name="Daniela Hadasch", email="hadasch@icrr.u-tokyo.ac.jp" },
]
description = "Tools to create event classes for IACTs in general and CTA/LST specifically"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas",
    "tables",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/IevgenVovk/lst-irf-classes"
"Bug Tracker" = "https://github.com/IevgenVovk/lst-irf-classes/issues"

[project.scripts]
icmcsplit = "iclass.scripts.mcsplit:main"
icmkmarkup = "iclass.scripts.icmkmarkup:main"

[tool.setuptools.package-data]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing"

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
source = ["src"]
